--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -7,7 +7,7 @@
                     <div class="block-23 mb-3">
                         <ul>
                             <li><span class="icon icon-map-marker"></span><span class="text">CH6R+86 Kétou, BENIN</span></li>
-                            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+229 61 27 49 48</span></a></li>
                             <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@maitre-aditi.com</span></a></li>
                         </ul>
                     </div>
