--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -31,7 +31,7 @@
                 <div class="col-md-3 d-flex">
                     <div class="bg-light align-self-stretch box p-4 text-center">
                         <h3 class="mb-4">Téléphone</h3>
-                        <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+                        <p><a href="tel://1234567920">+229 61 27 49 48</a></p>
                     </div>
                 </div>
                 <div class="col-md-3 d-flex">
