--- a/templates/partials/menu.html.twig
+++ b/templates/partials/menu.html.twig
@@ -17,7 +17,7 @@
                         <div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
                         <div class="text">
                             <span>Tel</span>
-                            <span>Téléphone: + 1235 2355 98</span>
+                            <span>Téléphone: +229 61 27 49 48</span>
                         </div>
                     </div>
                     <div class="col-md topper d-flex align-items-center justify-content-end">
